# nexus-shell

./: .gitignore  .gitmodules  .nexus-shell.zsh  .nexus.yaml  .rooignore  .swp  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_AUDIT.md  CONTRIBUTING.md  GEMINI_HANDOFF.md  README.md  ROADMAP.md  SOVEREIGN_INDEX.md  architectural_propositions.md  install.sh  install_local.sh  pyproject.toml  tasks.md
.agents/rules/: axiom.md
.agents/skills/: negative_space_debugging.md
.gap/: architecture.md  brainstorming_log.md  design.md  idea.md  master.md  status.yaml  taxonomy.md  walkthrough.md
.gap/proposals/: requirements.md  tasks.md
.gap/specs/: content-provider.md  execution-model.md  pack-governance.md  surface-abc.md
.github/workflows/: ci.yml
.hypothesis/constants/: 08149da20f969563  0e27790434c8106a  1c03a5830073fb23  4597ab3c26ccefbf  4d2d8c68c277f6eb  5240dfb698f13b76  6b0c3941b19e1993  6ea79dc73bce8fa5  7de4a8b18ecba6d8  82178fcd9e3bc5b9  89215a27f08331a5  b55d1b3ba7f5127f  c434dbc28a0c2c98  da39a3ee5e6b4b0d  ec9f638b5461823d  f50de92ce66ca476
.nexus/: lists.yaml  session_state.json
.nexus/actions/: build.sh  test.sh
.nexus/agents/: default.yaml
.nexus/compositions/: saved.json
.nexus/lists/: test.yaml
.nexus/notes/: v1_manifest.md
.nexus/vision/: v1_architecture.mmd
Plans/: SPEC-keybinds-phase3.md  SPEC-menu-architecture.md
actions/: nexus-swap.sh
compositions/: minimal.json  music.json  onboarding.json  quad_parallax.json  simple.json  sre.json  vscodelike.json
config/: actions.yaml  lists.yaml  modules.yaml  registry.yaml  safety.yaml  tools.conf  user_stacks.yaml
config/keybinds/: active.conf  default.conf  minimal.conf  user.conf  vim.conf
config/nvim/: init.lua
config/opencode/: opencode.json  package-lock.json
config/profiles/: ascent.yaml  music.yaml  sovereign.yaml  swarm.yaml
config/themes/: cyber.yaml  dark.yaml
config/tmux/: nexus.conf
config/yazi/: keymap.toml  yazi.toml
config/zsh/: .zcompdump  .zsh_history  .zshrc
core/: mosaic_engine.sh  mosaic_generator.py  switcher.sh
core/ai/: nxs-ask.sh  nxs-pi-gap.sh  pipe_error.sh  send_context.sh
core/api/: config_helper.py  control_bridge.py  dispatch_helper.py  intent_resolver.py  kill_agent.sh  module_registry.py  registry.json  tool_catalog.yaml  unload_brains.sh
core/boot/: boot_loader.sh  (+16 more)
crates/: Cargo.toml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: capability.rs  config.rs  constants.rs  error.rs  keymap.rs  lib.rs  mux.rs  surface.rs
crates/nexus-core/src/adapters/: claude.rs  fs_explorer.rs  mod.rs  notes_adapter.rs  system_info.rs  tauri_browser.rs
crates/nexus-daemon/: Cargo.toml
crates/nexus-daemon/src/: client.rs  event_bridge.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/nexus-daemon/tests/: integration.rs
crates/nexus-engine/: Cargo.toml
crates/nexus-engine/src/: browser.rs  bus.rs  chat.rs  content_tabs.rs  core.rs  dispatch.rs  editor.rs  explorer.rs  file_router.rs  hud.rs  info.rs  layout.rs  lib.rs  menu.rs  persistence.rs  pty.rs  registry.rs  richtext.rs  stack.rs  stack_manager.rs  surface.rs  templates.rs  terminal.rs
crates/nexus-engine/src/dispatch/: editor.rs  explorer.rs  mod.rs  surface.rs  system.rs
crates/nexus-engine/tests/: persistence_integration.rs
crates/nexus-tauri/: Cargo.toml  tauri.conf.json
crates/nexus-tauri/capabilities/: default.json
crates/nexus-tauri/src/: commands.rs  main.rs
crates/nexus-tauri/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/nexus-tauri/ui/src/: App.tsx  styles.css  tauri.ts
crates/nexus-tauri/ui/src/components/: BrowserTauri.tsx  ChatPane.tsx  ChatTauri.tsx  ChooserPane.tsx  CommandLine.tsx  CommandPalette.tsx  EditorPane.tsx  EditorTauri.tsx  ExplorerPane.tsx  ExplorerTauri.tsx  HUDTauri.tsx  InfoPane.tsx  InfoTauri.tsx  MenuTauri.tsx  PaneOverlayLayer.tsx  RichTextTauri.tsx  SettingsTauri.tsx  TabBar.tsx  TabListOverlay.tsx  TerminalPane.tsx  TerminalTauri.tsx
crates/nexus-tauri/ui/src/contexts/: PanePortalContext.tsx  PaneRectContext.tsx
crates/nexus-tauri/ui/src/hooks/: useTabStack.ts
data/: state.json
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  EXTENSION_ARCHITECTURE.md  INSTALLATION.md  MASTER_MANUAL.md  OPERATOR_GUIDE.md  ROADMAP.md  USAGE.md  USER_GUIDE.md  architectural_analysis.md  vision.md
extensions/: README.md  loader.sh
lib/: px-terminal-tabs.sh  swap.sh  yazi_open.sh
menus/: ai.yaml  home.yaml  keychain.yaml  settings.yaml
modules/: template_init.zsh
scripts/: diagnostics.sh  dispatch.sh  launcher.sh  layout_engine.sh  migrate_paths.sh  nxs-watch.sh  setup_env.sh  transaction_ui.sh
specs/: IDE_DISCOVERY_DESIGN.md  IDE_INFRASTRUCTURE_DESIGN.md  IDE_PILOT_MONITOR.md  IDE_VISUAL_GUIDELINES.md  tasks.md
tests/: README.md  diagnose_momentum.sh  test_momentum_layout.sh
(+956 files in other folders)
