[project]
name = "nexus-shell"
version = "2.1.0"
description = "A modular, high-performance terminal IDE framework built on TMUX"
authors = [
    { name = "Samir Al-Sayad", email = "samir@example.com" }
]
dependencies = [
    "pyyaml",
    "requests",
    "litellm",
    "textual",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "__pycache__", ".git", "*.egg-info",
    "docs", "external", "node_modules",
    "*.bak"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
