[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2021"
description = "Nexus Shell CLI — thin client for the Nexus daemon"

[dependencies]
nexus-client = { path = "../nexus-client" }
nexus-core = { path = "../nexus-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "nexus"
path = "src/main.rs"
