[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, traits, and constants for Nexus Shell crates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
