[package]
name = "nexus-daemon"
version = "0.1.0"
edition = "2021"
description = "Nexus Shell daemon — shared NexusCore over unix socket for multi-surface state"

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-engine = { path = "../nexus-engine" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "nexus_daemon"
path = "src/lib.rs"

[[bin]]
name = "nexus-daemon"
path = "src/main.rs"
