[package]
name = "nexus-engine"
version = "0.1.0"
edition = "2021"
description = "Core engine for Nexus Shell — surface-agnostic workspace orchestration"

[dependencies]
nexus-core = { path = "../nexus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
