[package]
name = "nexus-engine"
version = "0.1.0"
edition = "2021"
description = "Core engine for Nexus Shell — surface-agnostic workspace orchestration"

[dependencies]
nexus-core = { path = "../nexus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
